# icampRust

./: README.md  changelog.md
icampRust/: Cargo.toml
icampRust/example/: otu.txt
icampRust/src/: dniche.rs  main.rs  nti.rs
